--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
 	<title>DataDesk</title>
 
 	<link rel='icon' type='image/png' href='./assets/datadesk.png'>
-	<link rel='stylesheet' href='./global.css'>
+	<link rel='stylesheet' type="text/css" href='./global.css'>
 
-	<link rel='stylesheet' href='./build/bundle.css'>
+	<link rel='stylesheet'  type="text/css" href='./build/bundle.css'>
 
 	<script defer src='./build/bundle.js'></script>
 </head>
