--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <div class="logo">
             <img src="./images/logo-wide.png" alt="logo">
         </div>
+        <div class="description">DataDesk is a data collection, management and distribution platform built by <a href="https://mediahack.co.za">Media Hack Collective</a>.
+            <p>Contact us to find out more: <a href="mailto:info@datadesk.co.za">info@datadesk.co.za</a></p>
+        </div>
+        
     </main>
     
 </body>
